chapter-05/03-ingress/myingress-after.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: wisdompetmed.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: myservice
            port:
              number: 80
